# commerce-rag-ops

./: .gitignore  agent-project-shortlist.md  commerce-rag-agent-final-blueprint.md  ecommerce-customer-rag-focused-report.md  rag-agent-projects-with-data-metrics.md
commerce-rag-ops/: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
commerce-rag-ops/data/: README.md  quality_gates.json
commerce-rag-ops/docs/: agent_runtime_refactor.md  capability_matrix.md  data_card.md  document_ingestion_design.md  eval_v2_refactor_journey.md  intent_trace_design.md  interview_notes.md  llm_advisor_design.md  memory_design.md  p0_eval_repair_journey.md  retrieval_design.md  tool_refactor_journey.md
commerce-rag-ops/reports/: ablation_report.md  api_traces.jsonl  challenge_groundedness_report.json  challenge_groundedness_report.md  challenge_groundedness_rows.jsonl  challenge_leakage_report.md  challenge_local_report.md  challenge_qdrant_bge_reranker_report.md  challenge_report.md  citation_schema_smoke_report.md  combined_eval_report.md  end_to_end_trace_sample.json  eval_fairness_repair_report.md  evaluation_report.md  fallback_stress_report.md  frozen_heldout_eval_summary.md  humanlike_blind_groundedness_report.json  humanlike_blind_groundedness_report.md  humanlike_blind_groundedness_rows.jsonl  humanlike_blind_leakage_report.md  humanlike_blind_report.md  humanlike_context_required_report.md  humanlike_single_turn_resolvable_qdrant_bge_reranker_report.md  humanlike_single_turn_resolvable_report.md  llm_check_report.md  llm_judge_report.md  llm_trace.json  (+17 more)
(+106 files in other folders)
